<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f14711"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/turn_on_services"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#abffffff"
            android:checked="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/smsTextNumber"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="26dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/enterNumber"
                android:inputType="phone"
                android:maxLength="14"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ok"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:maxLength="15"
                android:maxLines="1"
                android:text="@string/ok"
                android:textColor="#ff0008"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="2dp"
            android:gravity="left"
            android:text="@string/info"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/stopMain"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="@string/stop"
                android:textColor="#ff0008"
                android:textSize="26dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:src="@drawable/ads" />
        </RelativeLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="350dp"
            android:layout_height="50dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>
</LinearLayout>